@@ -1,1 +1,7 @@
+#Conway's Game of Life (JavaFX)
+
 This project was a made using JavaFX and simulates Conway's Game of Life. 
+
+
+Use these arguments when running the jar file:
+--module-path /path/to/JavaFX/lib  --add-modules=javafx.controls,javafx.fxml
